# csv_median_calculator

./: CMakeLists.txt  CodeStyle.md  Doxyfile  README.md  build.sh  compile_commands.json  config.toml  run.sh  specs.md  start.sh
docs/: code-style.md  generate-test-data.sh  task-specs.md
examples/input/: btcusdt_level_2024.csv  btcusdt_trade_2024.csv
examples/output/: median_result.csv
src/: config_parser.cpp  config_parser.hpp  configuration.hpp  csv_reader.cpp  csv_reader.hpp  main.cpp  market_record.hpp  median_calculator.cpp  median_calculator.hpp  stats_calculator.cpp  stats_calculator.hpp
tests/: generate-test-data.sh  test_stats_calculator.cpp
tests/data/: config-for-test-stats.toml
